Replaces kerbal death with breakdown events, disables RTG half-life

--- a/GameData/KerbalismConfig/Profiles/ROKerbalism.cfg
+++ b/GameData/KerbalismConfig/Profiles/ROKerbalism.cfg
@@ -113,9 +113,8 @@ Supply
 		degeneration = 0.00000007 // about 2h at 100k temp diff in 20m^3 - FIXME default kerbalism value, needs testing
 		modifier = temperature,volume,per_capita
 		warning_message = $ON_VESSEL$KERBAL feels cold|$ON_VESSEL$KERBAL is sweating
-		danger_message = $ON_VESSEL$KERBAL is freezing|$ON_VESSEL$KERBAL is burning alive
-		fatal_message = $ON_VESSEL$KERBAL froze to death|$ON_VESSEL$KERBAL was burned alive
 		relax_message = $ON_VESSEL$KERBAL hypothermia is under control|$ON_VESSEL$KERBAL is cooling down
+		breakdown = true
 	}
 	Rule
 	{
@@ -127,9 +126,8 @@ Supply
 		individuality = 0.00 // Everyone eats the same amount
 		degeneration = 0.0111111 // 90 meals, 30 days (taken from TACLS profile)
 		warning_message = $ON_VESSEL$KERBAL is hungry
-		danger_message = $ON_VESSEL$KERBAL is starving
-		fatal_message = $ON_VESSEL$KERBAL starved to death
 		relax_message = $ON_VESSEL$KERBAL is enjoying a meal
+		breakdown = true
 	}
 	Rule
 	{
@@ -142,9 +140,8 @@ Supply
 		individuality = 0.00 // Everyone uses the same amount
 		warning_threshold = 0.1
 		warning_message = $ON_VESSEL$KERBAL is thirsty
-		danger_message = $ON_VESSEL$KERBAL is dehydrated
-		fatal_message = $ON_VESSEL$KERBAL died from dehydration
 		relax_message = $ON_VESSEL$KERBAL is enjoying a drink
+		breakdown = true
 	}
 	Rule
 	{
@@ -158,9 +155,8 @@ Supply
 		warning_threshold = 0.01
 		danger_threshold = 0.5
 		warning_message = $ON_VESSEL$KERBAL can't breathe
-		danger_message = $ON_VESSEL$KERBAL is suffocating
-		fatal_message = $ON_VESSEL$KERBAL suffocated to death
 		relax_message = $ON_VESSEL$KERBAL is breathing again
+		breakdown = true
 	}
 	Rule
 	{
@@ -170,9 +166,8 @@ Supply
 		warning_threshold = 0.01
 		danger_threshold = 0.5
 		warning_message = $VESSEL's CO2 levels are starting to rise
-		danger_message = $ON_VESSEL$KERBAL is having trouble breathing
-		fatal_message = $ON_VESSEL$KERBAL has died of CO2 poisoning
 		relax_message = $ON_VESSEL$KERBAL is breathing normally again
+		breakdown = true
 	}
 	Rule
 	{
@@ -190,15 +185,12 @@ Supply
 		name = radiation
 		degeneration = 1.0 // just use the modifier??
 		variance = 0.1 // IRL variations are huge, may want to keep them low or remove them for balance though
-		lifetime = true // Persists as a life time value
 		modifier = radiation,shielding
 		warning_threshold = 75.0
 		danger_threshold = 100.0
-		fatal_threshold = 150.0 // based on the career limit for ESA, FPA, CSA, NASA averages and JAXA averages + 50% bonus
 		warning_message = $ON_VESSEL$KERBAL has been exposed to intense radiation
-		danger_message = $ON_VESSEL$KERBAL is reporting symptoms of radiation poisoning
-		fatal_message = $ON_VESSEL$KERBAL died after being exposed to extreme radiation
 		relax_message = $ON_VESSEL$KERBAL no longer exposed to high levels of radiation
+		breakdown = true
 	}
 
 // ==============================================================================
@@ -636,7 +628,7 @@ Supply
 	{
 		name = RTG
 		modifier = _RTG
-		input = _RTG@0.00000000039637  // 40 year half-life
+		input = _RTG@0 //Disables RTG half-life
 		output = ElectricCharge@1.0
 		dump = true
 	}
